--- a/ac/source/src/Makefile
+++ b/ac/source/src/Makefile
@@ -19,7 +19,7 @@ CLIENT_OBJS= \
 	renderextras.o \
 	rendergl.o \
 	rendermd2.o \
-    rendermd3.o \
+    rendermd3_2.o \
 	renderparticles.o \
 	rendertext.o \
 	rndmap.o \
