--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -1,6 +1,14 @@
 // standard menu definitions
 
-bind ESCAPE "showmenu main"    // it all starts here
+alias menu_music ac.ogg
+
+alias mainmenu [
+    musicvol 128
+    music $menu_music
+    showmenu main
+]
+bind ESCAPE mainmenu    // it all starts here
+
 
 newmenu main
 
