pickup and armour fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@34 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -40,12 +40,10 @@ hudgun 1
 maxroll 0
 lighterror 1
 
-bind m show_acm
-
-alias sp    [ mode -2; map $arg1 ]
-alias dmsp  [ mode -1; map $arg1 ]
-alias ffa   [ mode  0; map $arg1 ]
-alias insta [ mode  4; map $arg1 ]
+//alias sp    [ mode -2; map $arg1 ]
+//alias dmsp  [ mode -1; map $arg1 ]
+//alias ffa   [ mode  0; map $arg1 ]
+//alias insta [ mode  4; map $arg1 ]
 
 
 // below is a fun new way of editing, with all using the mousewheel
@@ -67,8 +65,9 @@ alias universaldelta [
 bind MOUSE4 [ universaldelta  1 ]
 bind MOUSE5 [ universaldelta -1 ]
 
-bind 1 previous
-bind 2 next
+bind 1 primary
+bind 2 secondary
+bind 3 melee
 bind R reload
 bind MOUSE2 altattack
 
@@ -92,5 +91,5 @@ alias delta_game_1 [
 
 // change
 hudgun 1
-bind  p [ connect 67.163.146.134 ]
+bind  p [ connect 67.163.146.120 ]
 showmenu maps
