--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -46,8 +46,8 @@ genmapitems "ac_complex ac_mines ac_office"
 
 newmenu team
 
-menuitem "Special Forces"
-menuitem "Freedom Fighters"
+menuitem "CT"
+menuitem "T"
 
 newmenu gamemode
 
@@ -56,7 +56,8 @@ menuitem "Team Deathmatch"        "mode 1;  showmenu maps"
 menuitem "Team Survivor"          "mode 1;  showmenu maps"
 menuitem "Capture the Flag"       "mode 2;  showmenu maps"
 menuitem "Deathmatch"        	  "mode 0;  showmenu maps"
-menuitem "Deathmatch Arena (LMS)" "mode 0;  showmenu maps"
+menuitem "Deathmatch Arena"       "mode 0;  showmenu maps"
+menuitem "Pistols"                "mode 5;  showmenu maps"
 
 
 newmenu spawnmode
@@ -236,13 +237,13 @@ menuitem "Equipment"	        "showmenu equipment"
 
 newmenu "primary"
 
-menuitem "Mtp 57 Assault Rifle"			"echo MK-77 Assault Rifle chosen"
+menuitem "Mtp 57 Assault Rifle"			"echo MTP-57 Assault Rifle chosen"
 menuitem "A-ARD/10 Submachine Gun"		"echo A-ARD/10 Submachine Gun chosen"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "echo Precision Tech AD-81 Sniper Rifle chosen"
+menuitem "Precision Tech AD-81 Sniper Rifle"    "echo Precision Tech AD-81 Sniper Rifle chosen"
 menuitem "V-19 Combat Shotgun"			"echo V-19 Combat Shotgun chosen"
 
 newmenu "secondary"
-menuitem "Mk-77 Semi-Automatic Pistol"	        "echo MTP 57 Semi-Automatic Pistol Chosen"
+menuitem "Mk-77 Semi-Automatic Pistol"	        "echo MK 77 Semi-Automatic Pistol Chosen"
 
 newmenu "equipment"
 menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen"
