*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@41 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -1,8 +1,8 @@
 // put all your personal settings in this file,
 // and all your keybindings that are different from the default (see keymap.cfg)
 
-name "mapper"     // change!
-team "AC!"
+name "unarmed"     // change!
+team "AC"
 
 invmouse 0         // 1 for flightsim mode
 sensitivity 50
@@ -10,7 +10,10 @@ sensitivityscale 10
 
 fov 100
 
-musicvol 0       // set higher if you want (max 255)
+alias only_menu_music 1
+alias menu_music ac.ogg
+
+musicvol 0 // set higher if you want (max 255)
 soundvol 150
 
 fpsrange 30 40     // *don't modify* unless you understand it fully
@@ -36,7 +39,7 @@ bind A left
 bind S backward
 bind D right
 
-hudgun 1
+hudgun 0
 maxroll 0
 lighterror 1
 
@@ -89,7 +92,8 @@ alias delta_game_1 [
   fov $zfov
 ]
 
+if (only_menu_music) [ musicvol 1; music $menu_music ]
+
+
 // change
 hudgun 1
-bind  p [ connect 67.163.146.120 ]
-showmenu maps
