--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -1,13 +1,6 @@
 // standard menu definitions
 
-alias menu_music ac.ogg
-
-alias mainmenu [
-    musicvol 128
-    music $menu_music
-    showmenu main
-]
-bind ESCAPE mainmenu    // it all starts here
+bind ESCAPE [ if (only_menu_music) [ musicvol 128 ]; showmenu main ] // it all starts here
 
 
 newmenu main
