--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -5,7 +5,7 @@ name "unarmed"     // change!
 team "AC"
 
 invmouse 0         // 1 for flightsim mode
-sensitivity 50
+sensitivity 30
 sensitivityscale 10
 
 fov 100
@@ -39,9 +39,9 @@ bind A left
 bind S backward
 bind D right
 
-hudgun 0
+hudgun 1
 maxroll 0
-lighterror 1
+lighterror 8
 
 //alias sp    [ mode -2; map $arg1 ]
 //alias dmsp  [ mode -1; map $arg1 ]
@@ -81,7 +81,7 @@ alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
 alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 
-alias delta_game_0 [ if (= $arg1 1) [ weapon 2 3 1 ] [ weapon 4 1 2 ] ]
+alias delta_game_0 [ if (= $arg1 1) [ wup ] [ wdw ] ]
 
 alias zfov 100
 
@@ -94,6 +94,10 @@ alias delta_game_1 [
 
 if (only_menu_music) [ musicvol 1; music $menu_music ]
 
+bind p "connect 67.163.146.134" 
 
 // change
 hudgun 1
+
+bind KP_MINUS "conskip 1"
+bind KP_PLUS "conskip -1"
