--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -1,7 +1,6 @@
 // standard menu definitions
 
-bind ESCAPE [ if (only_menu_music) [ musicvol 128 ]; showmenu main ] // it all starts here
-
+bind ESCAPE "showmenu main"    // it all starts here
 
 newmenu main
 
@@ -35,12 +34,12 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_office"
+genmapitems "ac_complex ac_mines ac_depot ac_desert"
 
 newmenu team
 
-menuitem "CT"
-menuitem "T"
+menuitem "Special Forces"
+menuitem "Freedom Fighters"
 
 newmenu gamemode
 
@@ -49,8 +48,7 @@ menuitem "Team Deathmatch"        "mode 1;  showmenu maps"
 menuitem "Team Survivor"          "mode 1;  showmenu maps"
 menuitem "Capture the Flag"       "mode 2;  showmenu maps"
 menuitem "Deathmatch"        	  "mode 0;  showmenu maps"
-menuitem "Deathmatch Arena"       "mode 0;  showmenu maps"
-menuitem "Pistols"                "mode 5;  showmenu maps"
+menuitem "Deathmatch Arena (LMS)" "mode 0;  showmenu maps"
 
 
 newmenu spawnmode
@@ -66,6 +64,7 @@ newmenu editing
 
 menuitem "Mapmodels..."				"showmenu mapmodels"
 menuitem "Entities"			        "showmenu entities"
+menuitem "Pickups"                              "showmenu pickups"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
 menuitem "help..."                              "showmenu editkeys"
@@ -193,6 +192,13 @@ menuitem sf_flag                "echo unknown command..."
 menuitem ff_flag                "echo unknown command..."
 menuitem ladder                 "newent ladder"
 
+newmenu pickups
+
+menuitem "Health"                "newent health"
+menuitem "Pistol Ammo"           "newent clips"
+menuitem "Box of Ammo"           "newent ammobox"
+menuitem "Kevlar Vest"           "newent armour"
+menuitem "Akimbo"                "echo not yet..."
 
 newmenu arches
 
@@ -230,13 +236,13 @@ menuitem "Equipment"	        "showmenu equipment"
 
 newmenu "primary"
 
-menuitem "Mtp 57 Assault Rifle"			"echo MTP-57 Assault Rifle chosen"
-menuitem "A-ARD/10 Submachine Gun"		"echo A-ARD/10 Submachine Gun chosen"
-menuitem "Precision Tech AD-81 Sniper Rifle"    "echo Precision Tech AD-81 Sniper Rifle chosen"
-menuitem "V-19 Combat Shotgun"			"echo V-19 Combat Shotgun chosen"
+menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen"
+menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen"
+menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen"
 
 newmenu "secondary"
-menuitem "Mk-77 Semi-Automatic Pistol"	        "echo MK 77 Semi-Automatic Pistol Chosen"
+menuitem "Mk-77 Semi-Automatic Pistol"	        "item 1;echo MTP 57 Semi-Automatic Pistol Chosen"
 
 newmenu "equipment"
 menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen"
@@ -325,7 +331,7 @@ menuitem "              Models, Skins, Animation" ""
 menuitem "              Sound, some Textures" ""
 menuitem "Nieb         Models" ""
 menuitem "Jcdpc        Maps, Models, Skins" ""
-menuitem "Mitaman     Maps" ""
+menuitem "Mitaman     Maps,Ressources" ""
 menuitem "Rick         Bots, Win32-Compiling" ""
 menuitem "Verbal       QA, Advisor, Lead Tester" ""
 menuitem "dtd          Webdesign, Hosting" ""
