--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -1,5 +1,5 @@
 loadsky "skymaps/makke/mountain"
-fog 375
+fog 500
 fogcolour 0x968070
 mapmodelreset						
 mapmodel 1  1 0 0 "dcp/qb2x2"
@@ -38,7 +38,7 @@ texturereset
 texture 0 "kurt/klite1.jpg" //damn dummy
 
 texture 0 "./craig_fortune/terrain/rubble.jpg"
-texture 0 "./craig_fortune/terrain/Sand_dry.jpg"
+texture 0 "./makke/rock.jpg"  
 texture 0 "./craig_fortune/terrain/Mud_thick.jpg"
 texture 0 "./craig_fortune/terrain/sand_bleached.jpg"
 texture 0 "./craig_fortune/terrain/Rock_rubble.jpg"
@@ -91,7 +91,7 @@ texture 0 "./arcitool/stulp4.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
 texture 0 "./arcitool/schotter1.jpg"
 texture 0 "./arcitool/schotter2.jpg"
-texture 0 "./arcitool/Eternit-grau-c.jpg"
+texture 0 "./makke/rock.jpg"  
 texture 0 "./arcitool/stulp-unterteilt.jpg"
 texture 0 "./arcitool/Cotta1-braun.jpg"
 texture 0 "./arcitool/Blockbohlen-natur.jpg"
