removed also steini1 skybox (unused) Changed lighterror to 4
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@63 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -41,7 +41,8 @@ bind D right
 
 hudgun 1
 maxroll 0
-lighterror 8
+lighterror 4 //change to 8 if you experience low fps
+particlesize 45
 
 //alias sp    [ mode -2; map $arg1 ]
 //alias dmsp  [ mode -1; map $arg1 ]
