sound.cfg adjusted
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@73 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -2,22 +2,22 @@ registersound "player/jump"         //S_JUMP
 registersound "player/land"         //S_LAND 
 registersound "weapon/knife"        //S_KNIFE
 registersound "weapon/usp"          //S_PISTOL
-registersound "free/tick"           //S_RPISTOL
+registersound "weapon/pistol_reload"           //S_RPISTOL
 registersound "weapon/shotgun"      //S_SHOTGUN
-registersound "free/tick1"           //S_RSHOTGUN
+registersound "weapon/shotgun_reload"           //S_RSHOTGUN
 registersound "weapon/sub"          //S_SUBGUN
-registersound "free/tick2"           //S_RSUBGUN
+registersound "weapon/sub_reload"           //S_RSUBGUN
 registersound "weapon/sniper"       //S_SNIPER
-registersound "free/tick3"           //S_RSNIPER
+registersound "weapon/sniper_reload"           //S_RSNIPER
 registersound "weapon/auto"         //S_ASSULT
-registersound "free/tick4"           //S_RASSULT
+registersound "weapon/auto_reload"           //S_RASSULT
 registersound "free/tick5"           //S_GRENADE
-registersound "free/tick6"           //S_ITEMAMMO
-registersound "free/tick7"           //S_ITEMHEALTH
-registersound "free/tick8"           //S_ITEMARMOUR
+registersound "misc/pickup_ammo_clip"           //S_ITEMAMMO
+registersound "misc/pickup_health"           //S_ITEMHEALTH
+registersound "misc/pickup_armour"           //S_ITEMARMOUR
 registersound "free/tick9"           //S_ITEMPUP
 registersound "free/tick10"           //S_ITEMSPAWN
-registersound "aard/outofammo"      //S_NOAMMO
+registersound "weapon/clip_empty"      //S_NOAMMO
 registersound "free/tick11"           //S_PUPOUT
 registersound "player/pain1"        //S_PAIN1
 registersound "player/pain2"        //S_PAIN2
