sound fixes, map fixes
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@80 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -113,7 +113,7 @@ texturereset    // starts the texture slot/index at 0
 texture 0 "kurt/klite1.jpg" //damn dummy
 
 texture 0 "noctua/water/water04.jpg"                           
-texture 0 "./craig_fortune/terrain/Sand_dry.jpg"                      
+texture 0 "./boeck/rolltor.jpg"                   
 texture 0 "./craig_fortune/terrain/Mud_thick.jpg"                    
 texture 0 "./mitaman/golgotha/tunnel_ceiling.jpg"             
 texture 0 "./craig_fortune/terrain/Rock_rubble.jpg"
@@ -153,7 +153,7 @@ texture 0 "./arcitool/Cotta2-rot.jpg"
 texture 0 "./makke/18-Brick.jpg"                      
 texture 0 "./mitaman/3dcafe/door12.jpg"
 texture 0 "./arcitool/Cotta1-graubraunhell.jpg"
-texture 0 "./mitaman/zastrow/stone_path.jpg"
+texture 0 "./boeck/rolltor.jpg"
 texture 0 "./arcitool/Eternit-beige-b.jpg"
 texture 0 "./makke/02-GroundCover.jpg"   
 texture 0 "./arcitool/Cotta1-rotbraun.jpg"
@@ -193,7 +193,7 @@ texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall01.jpg"
 texture 0 "./noctua/wall/wall02.jpg"          
 texture 0 "./noctua/wall/rauhfa01.jpg"    
-texture 0 "./noctua/wall/brick01.jpg"
+texture 0 "./boeck/rolltor.jpg"
 texture 0 "./noctua/wall/brick02.jpg"       
 texture 0 "./noctua/wall/plast01.jpg"            
 texture 0 "./noctua/wall/plast02.jpg"       
@@ -249,7 +249,7 @@ texture 0 "./mitaman/grsites/rock178.jpg"
 texture 0 "./mitaman/grsites/wood060.jpg"
 texture 0 "./mitaman/3dcafe/door15.jpg"
 texture 0 "./mitaman/lemog/022bois.jpg"
-texture 0 "./mitaman/grsites/wood120.jpg"
+texture 0 "./boeck/rolltor.jpg"
 //texture 0 "./noctua/tiles/16tile-B.jpg"
 //texture 0 "./noctua/tiles/16tile01.jpg"
 //texture 0 "./noctua/tiles/16tile02.jpg"
@@ -260,10 +260,10 @@ texture 0 "./mitaman/grsites/wood120.jpg"
 texture 0 "./noctua/tiles/16tile06.jpg"
 
 texture 0 "./mitaman/3dcafe/objects09_a.jpg"
-texture 0 "./mitaman/3dcafe/stone30.jpg"
-texture 0 "./mitaman/zastrow/big_blocks.jpg"
-texture 0 "./mitaman/3dcafe/stone41.jpg"
-texture 0 "./mitaman/lemog/31_neutre_gris.jpg"
+texture 0 "./boeck/rolltor.jpg"
+texture 0 "./boeck/rolltor.jpg"
+texture 0 "./boeck/rolltor.jpg"
+texture 0 "./boeck/rolltor.jpg"
 //texture 0 "./noctua/tiles/16tile07.jpg"
 //texture 0 "./noctua/tiles/16tile08.jpg"
 //texture 0 "./noctua/tiles/16tile09.jpg"
@@ -310,10 +310,10 @@ texture 0 "./makke/stein.jpg
 
 texture 0 "./makke/door.jpg"          
 
-texture 0 "./mitaman/noctua/planks01_h.jpg"
+texture 0 "./boeck/rolltor.jpg"
 texture 0 "./mitaman/lemog/37_melange.jpg"
 texture 0 "./mitaman/bishop/Stone02.jpg"
-texture 0 "./mitaman/3dcafe/stone43.jpg"
+texture 0 "./boeck/rolltor.jpg"
 texture 0 "./mitaman/grsites/metal022.jpg"
 texture 0 "./mitaman/grsites/metal021.jpg"
 //texture 0 "./noctua/textile/carpet01.jpg"
@@ -329,7 +329,7 @@ texture 0 "./makke/klappe3.jpg"
 texture 0 "./makke/neuklappe.jpg"            
 texture 0 "./makke/panel.jpg"             
 
-texture 0 "./mitaman/lemog/055bois.jpg"
+texture 0 "./boeck/rolltor.jpg"
 texture 0 "./mitaman/noctua/cobbles02.jpg"
 texture 0 "./mitaman/zastrow/block_wall_06.jpg"
 texture 0 "./mitaman/zastrow/brick_wall_05.jpg"
@@ -353,7 +353,7 @@ texture 0 "./makke/11-Brick.jpg"
 texture 0 "./makke/floor1.jpg"                
 texture 0 "./noctua/ground/ground02.jpg"              
 texture 0 "./makke/dcp_floor01.jpg"               
-texture 0 "./mitaman/bishop/Metal02.jpg"                
+texture 0 "./boeck/rolltor.jpg"            
 texture 0 "./makke/stuck1.jpg"                
 texture 0 "./noctua/ground/ground06.jpg"               
 texture 0 "./boeck/stone_014.jpg"               
