*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@87 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -8,13 +8,16 @@ menuitem "Join Game"  	                "servermenu"
 menuitem "Refresh Serverlist" 		"updatefrommaster"
 menuitem "Vote.." 			"showmenu gamemode"
 menuitem "Load Map.."			"showmenu maps"
+menuitem "Change Team"			"showmenu team"
 menuitem "Disconnect"			"disconnect"
 menuitem "Options.."                      "showmenu options"
 menuitem "Editing.."        		"showmenu editing"
 menuitem "about/credits/help"           "showmenu about"
 menuitem "Quit"				"quit"
 
-
+// menubg	 "textures/blah..."
+// menumdl path frame range rotation-speed{0-100} scale{0-100}
+// chmenumdl menuname newpath
 
 alias genmapitems [
     alias n (listlen $arg1)
@@ -38,8 +41,10 @@ genmapitems "ac_complex ac_mines ac_depot ac_desert"
 
 newmenu team
 
-menuitem "Special Forces"
-menuitem "Freedom Fighters"
+menumdl playermodels/terrorist 0 1 50 10
+menuitem "Terrorists"			"team 0" "chmenumdl team playermodels/terrorist 0 1 50 10"
+menuitem "Counter Terrorists"		"team 1" "chmenumdl team playermodels/counterterrorist 0 1 50 10"
+
 
 newmenu gamemode
 
@@ -236,17 +241,20 @@ menuitem "Equipment"	        "showmenu equipment"
 
 newmenu "primary"
 
-menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen"
-menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen"
-menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen"
-menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen"
+//menumdl vwep/assault 0 1 40 60
+menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" // "chmenumdl primary vwep/assault 0 1 40 60"
+menuitem "A-ARD/10 Submachine Gun"		"item 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl primary vwep/subgun 0 1 40 60"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "item 4,echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl primary vwep/sniper 0 1 40 60"
+menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmenumdl primary vwep/shotgun 0 1 40 60"
 
 newmenu "secondary"
-menuitem "Mk-77 Semi-Automatic Pistol"	        "item 1;echo MTP 57 Semi-Automatic Pistol Chosen"
+menumdl vwep/semipistol 0 1 40 60
+menuitem "Mk-77 Semi-Automatic Pistol"	        "item 1;echo MTP 57 Semi-Automatic Pistol Chosen" 
 
 newmenu "equipment"
-menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen"
-menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen"
+menumdl vwep/grenade_static 0 1 40 80
+menuitem "DR-17 HE-Grenade"			"echo DR-17 HE-Grenade chosen" "chmenumdl equipment vwep/grenade_static 0 1 40 80"
+menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar 0 1 40 20"
 
 newmenu options
 
