--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -337,7 +337,7 @@ menuitem "driAn        Lead Coder" ""
 menuitem "makkE       Lead Mapper/Modeller" ""
 menuitem "              Models, Skins, Animation" ""
 menuitem "              Sound, some Textures" ""
-menuitem "Nieb         Models" ""
+menuitem "Nieb         Models, Hosting" ""
 menuitem "Jcdpc        Maps, Models, Skins" ""
 menuitem "Mitaman     Maps,Ressources" ""
 menuitem "Rick         Bots, Win32-Compiling" ""
