New folder docs, cleanup
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@117 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -5,7 +5,7 @@ name "unarmed"     // change!
 team "AC"
 
 invmouse 0         // 1 for flightsim mode
-sensitivity 19
+sensitivity 18
 sensitivityscale 10
 
 fov 100
@@ -69,9 +69,12 @@ alias universaldelta [
 bind MOUSE4 [ universaldelta  1 ]
 bind MOUSE5 [ universaldelta -1 ]
 
-bind 1 primary
-bind 2 secondary
-bind 3 melee
+bind 1 "weapon 1"
+bind 2 "weapon 2"
+bind 3 "weapon 3"
+bind 4 "weapon 4"
+bind 5 "weapon 5"
+bind 6 "weapon 6"
 bind R reload
 bind MOUSE2 altattack
 
