testing moving/removal of dir (skymaps)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@120 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_depot_org.cfg
+++ b/ac/packages/maps/ac_depot_org.cfg
@@ -90,11 +90,11 @@ mapmodel 1 8 0 0 "fencegate_open"      //47
 // skybox for this map - check /packages/skymaps/
 
 
-//loadsky "skymaps/steini/steini2"
-//loadsky "skymaps/steini/steini3"
-loadsky "skymaps/steini/steini4"
-//loadsky "skymaps/makke/rocky"
-//loadsky "skymaps/makke/mountain"
+//loadsky "textures/skymaps/steini/steini2"
+//loadsky "textures/skymaps/steini/steini3"
+loadsky "textures/skymaps/steini/steini4"
+//loadsky "textures/skymaps/makke/rocky"
+//loadsky "textures/skymaps/makke/mountain"
 
 // used textures in this map - check /packages/textures/
 
