--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -56,11 +56,11 @@ mapmodel 0 0 0 0 "bulb"
 
 // skybox for this map - check /packages/skymaps/
 
-//loadsky "skymaps/steini/steini1"
-//loadsky "skymaps/steini/steini2"
-//loadsky "skymaps/steini/steini3"
-//loadsky "skymaps/steini/steini4"
-loadsky "skymaps/makke/rocky"
+//loadsky "textures/skymaps/steini/steini1"
+//loadsky "textures/skymaps/steini/steini2"
+//loadsky "textures/skymaps/steini/steini3"
+//loadsky "textures/skymaps/steini/steini4"
+loadsky "textures/skymaps/makke/rocky"
 
 // used textures in this map - check /packages/textures/
 
