Our own box texture
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@137 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -1,5 +1,4 @@
 // *IMPORTANT NOTE FOR AC-MAPPERS*
-
 // BE SURE TO COPY THIS FILE AND MAKE IT YOUR MAP CONFIG
 // BEFORE(!!) YOU EDIT ANYTHING.
 // THEN START AC, GO EDIT-MODE,GO /NEWMAP
@@ -16,13 +15,11 @@ mapmodel 1  1 0 0 "dcp/qb2x2"      //1
 mapmodel 2  1 0 0 "dcp/qb4x4"      //2  
 mapmodel 3  1 0 0 "dcp/qb8x8"      //3
 mapmodel 3  1 0 0 "comp_bridge"    //4
-
 mapmodel 0 7 0 0 "ladder_7x"       //5
 mapmodel 0 8 0 0 "ladder_8x"       //6
 mapmodel 0 10 0 0 "ladder_10x"     //7
 mapmodel 0 11 0 0 "ladder_11x"     //8
 mapmodel 0 15 0 0 "ladder_15x"     //9 
-
 mapmodel 1 11 0 0 "dcp/streetlamp" //10
 mapmodel 1 12 0 0 "streetlamp"     //11
 mapmodel 3  2 0 0 "dcp/bench"      //12
@@ -33,12 +30,10 @@ mapmodel 1 8 0 0 "fence"           //16 mind the orientation of fence components
 mapmodel 1 8 0 0 "fencepost"       //17  
 mapmodel 1 8 0 0 "fencegate_open"  //18
 mapmodel 1 8 0 0 "fencegate_closed"//19
-
 mapmodel 0 0 0 0 "grass01"         //20
 mapmodel 0 0 0 0 "grass02"         //21
 mapmodel 0 0 0 0 "plant01"         //22
 mapmodel 1 7 0 0 "tree01"          //23
-
 mapmodel 1 2 0 0 "chair1"          //24
 mapmodel 0 0 0 0 "laptop1"         //25
 mapmodel 0 0 0 0 "picture1"        //26 If you wish to put a custom pic in the frame
@@ -49,7 +44,6 @@ mapmodel 1 6 0 0 "locker"          //27
 mapmodel 0 0 0 0 "strahler"        //28
 mapmodel 0 0 0 0 "light01"         //29 
 mapmodel 0 0 0 0 "bulb"            //30
-
 mapmodel 1  3 0 0 "barrel"         //31
 mapmodel 1  2 0 0 "barrel2"        //32
 mapmodel 0  0 0 0 "elektro"        //33  
@@ -59,22 +53,18 @@ mapmodel 2 1 0 0 "gutter_h"        //36
 mapmodel 1 2 0 0 "gutter_v"        //37
 mapmodel 0 0 0 0 "wrench"          //38
 mapmodel 0 0 0 0 "screw"           //39
-
 mapmodel 0  0 0 0 "signs/flammable"//40
 mapmodel 0  0 0 0 "signs/speed"    //41
 mapmodel 0  0 0 0 "signs/maint"    //42
 mapmodel 0  0 0 0 "signs/caution"  //43
 mapmodel 0 0 0 0 "signs/biohazard" //44 
-
 mapmodel 0 0 0 0 "fag"             //45
 mapmodel 0 0 0 0 "can"             //46
 mapmodel 0 0 0 0 "can2"            //47
 mapmodel 0 0 0 0 "wood01"          //48
 mapmodel 0 0 0 0 "hook"            //49
 
-
 // skybox for this map - check /packages/skymaps/
-
 
 //loadsky "textures/skymaps/steini/steini2"
 //loadsky "textures/skymaps/steini/steini3"
@@ -89,7 +79,6 @@ loadsky "textures/skymaps/steini/steini4"
 // texture 2 is the default wall texture (for new maps)
 // texture 3 is the default floor texture
 // texture 4 is the default ceiling texture
-
 
 texturereset    // starts the texture slot/index at 0
 
@@ -129,7 +118,6 @@ texture 0 "./makke/01-CMU.jpg"
 texture 0 "./makke/mauer1.jpg"
 texture 0 "./makke/mauer2.jpg"
 texture 0 "./mitaman/3dcafe/stone18.jpg"
-
 
 //---- tiles --------
 
@@ -184,7 +172,6 @@ texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
 
-
 //-----wall/ceiling/plaster------
 
 texture 0 "./arcitool/sichtbeton1.jpg"
@@ -197,7 +184,6 @@ texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./mitaman/various/027metal.jpg"
-
 
 //---------metal----------
 
@@ -227,7 +213,6 @@ texture 0 "./noctua/metal/verdig01.jpg"
 texture 0 "./noctua/metal/brass01.jpg"
 texture 0 "./mitaman/various/006metal.jpg"
 texture 0 "./mitaman/various/metal020.jpg"
-
 
 //-------wood---------------------
 
@@ -281,7 +266,6 @@ texture 0 "./noctua/ground/pebble01.jpg"
 texture 0 "./noctua/ground/ground02.jpg"
 texture 0 "./noctua/ground/ground06.jpg"
 
-
 //-----rock/stone----------------
 
 texture 0 "./arcitool/schotter1.jpg"
@@ -311,9 +295,8 @@ texture 0 "./noctua/wall/conc03.jpg"
 texture 0 "./noctua/wall/conc04.jpg"
 texture 0 "./noctua/wall/d_wall01.jpg"
 
-
-
 //-------------carpet---------------
+
 texture 0 "./noctua/textile/carpet04.jpg"
 texture 0 "./noctua/textile/carpet01.jpg"
 texture 0 "./noctua/textile/carpet02.jpg"
@@ -343,8 +326,6 @@ texture 0 "./mitaman/various/metal026.jpg"
 texture 0 "./mitaman/various/vent_cap.jpg"
 texture 0 "./mitaman/various/rgrates0006.jpg"
 texture 0 "./mitaman/various/large_plate.jpg"
-
-
 texture 0 "./makke/lampe.jpg"
 texture 0 "./makke/lampe_tile.jpg"
 texture 0 "./makke/lampe_tile_a.jpg"
@@ -352,19 +333,16 @@ texture 0 "./makke/lampe_tile2.jpg"
 texture 0 "./makke/lampe_tile2_a.jpg"
 texture 0 "./kurt/klite1.jpg"
 texture 0 "./kurt/klite2.jpg"
-
 texture 0 "./makke/stairtrim.jpg"
 texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
 texture 0 "./mitaman/zastrow/metal_siding_kinksb.jpg"
-
 texture 0 "./makke/window.jpg"
 texture 0 "./makke/windows.jpg"     
 texture 0 "./mitaman/zastrow/sub_window31.jpg"
 texture 0 "./mitaman/zastrow/sub_window33.jpg"
 texture 0 "./mitaman/various/sub_window23.jpg"
 texture 0 "./mitaman/various/sub_window38.jpg"
-
 texture 0 "./mitaman/3dcafe/door10.jpg"
 texture 0 "./mitaman/3dcafe/door12.jpg"
 texture 0 "./mitaman/3dcafe/door15.jpg"
@@ -376,6 +354,7 @@ texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
 texture 0 "./mitaman/3dcafe/objects08.jpg"
 
 //------crates----------
+
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
 texture 0 "./zastrow/3wood_crate_03.jpg"
@@ -390,6 +369,6 @@ texture 0 "./zastrow/wood_crate_02.jpg"
 texture 0 "./zastrow/wood_crate_03.jpg"
 texture 0 "./zastrow/wood_crate_10.jpg"
 texture 0 "./zastrow/wood_crate_12.jpg"
-texture 0 "./makke/box12b_2.jpg"
-texture 0 "./makke/box12b.jpg"
-texture 0 "./makke/box12b_3.jpg"           //241
+texture 0 "./makke/box_2.jpg"
+texture 0 "./makke/box_4.jpg"
+texture 0 "./makke/box_3.jpg"           //241
