--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -222,8 +222,8 @@ texture 0 "./noctua/textile/carpet06.jpg"
 texture 0 "./zastrow/2wood_crate_03.jpg"
 texture 0 "./zastrow/3wood_crate_02.jpg"
 texture 0 "./zastrow/wood_crate_03.jpg"
-texture 0 "./makke/box12b_3.jpg"
-texture 0 "./makke/box12b_2.jpg"
+texture 0 "./makke/box_3.jpg"
+texture 0 "./makke/box_2.jpg"
 texture 0 "./noctua/textile/burlap01.jpg"
 texture 0 "./boeck/stone_022.jpg"
 texture 0 "./boeck/rolltor.jpg"              // ./noctua/textile/textil02
@@ -276,7 +276,7 @@ texture 0 "./makke/concrete_trim.jpg"
 texture 0 "./makke/concrete_trim_small.jpg"
 texture 0 "./makke/rock.jpg"  
 texture 0 "./makke/floor1.jpg"
-texture 0 "./makke/box12b.jpg"
+texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/neuklappe.jpg"
 texture 0 "./makke/aircon.jpg"
