--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -146,7 +146,7 @@ texture 0 "./makke/wood_01.jpg"
 texture 0 "./boeck/wood_008.jpg"                   
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
-texture 0 "./makke/box12b.jpg"                     //2x2 and 3x3 version of this crate can be found in /textures/makke
+texture 0 "./makke/box_4.jpg"                     //2x2 and 3x3 version of this crate can be found in /textures/makke
 texture 0 "./mitaman/3dcafe/objects12.jpg"
 texture 0 "./mitaman/grsites/brick051.jpg"
 texture 0 "./arcitool/Cotta2-rot.jpg"
