--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -109,7 +109,7 @@ texture 0 "./makke/wood_01.jpg"
 texture 0 "./boeck/wood_008.jpg"                   
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
-texture 0 "./makke/box12b.jpg"                     //2x2 and 3x3 version of this crate can be found in /textures/makke
+texture 0 "./makke/box_4.jpg"                     //2x2 and 3x3 version of this crate can be found in /textures/makke
 texture 0 "./arcitool/Wiese3.jpg"
 texture 0 "./arcitool/Wiese6.jpg"
 texture 0 "./arcitool/Cotta2-rot.jpg"
@@ -263,8 +263,8 @@ texture 0 "./makke/klappe3.jpg"
 texture 0 "./makke/neuklappe.jpg"            
 texture 0 "./makke/panel.jpg"             
 texture 0 "./noctua/textile/burlap01.jpg"
-texture 0 "./makke/box12b_3.jpg"
-texture 0 "./makke/box12b_2.jpg"
+texture 0 "./makke/box_3.jpg"
+texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/black.jpg"
 texture 0 "./makke/special_stone15.jpg"
 texture 0 "./noctua/textile/textil05.jpg"
