--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -12,7 +12,7 @@ mapmodel 1  2 0 0 "barrel2"
 mapmodel 0  0 0 0 "elektro"
 mapmodel 1 11 0 0 "dcp/streetlamp"
 mapmodel 3  1 0 0 "dcp/palette"
-mapmodel 3  2 0 0 "dcp/bench"
+mapmodel 3  2 0 0 "bench"
 mapmodel 0  0 0 0 "signs/flammable"
 mapmodel 0  0 0 0 "signs/speed"
 mapmodel 0  0 0 0 "signs/maint"
