--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -11,7 +11,7 @@ mapmodel 1  2 0 0 "barrel2"        //6
 mapmodel 0  0 0 0 "elektro"        //7   
 mapmodel 1 11 0 0 "dcp/streetlamp" //8
 mapmodel 3  1 0 0 "dcp/palette"    //9
-mapmodel 3  2 0 0 "dcp/bench"      //10
+mapmodel 3  2 0 0 "bench"          //10
 mapmodel 0  0 0 0 "signs/flammable"//11
 mapmodel 0  0 0 0 "signs/speed"    //12
 mapmodel 0  0 0 0 "signs/maint"    //13
