--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -22,7 +22,7 @@ mapmodel 0 11 0 0 "ladder_11x"     //8
 mapmodel 0 15 0 0 "ladder_15x"     //9 
 mapmodel 1 11 0 0 "dcp/streetlamp" //10
 mapmodel 1 12 0 0 "streetlamp"     //11
-mapmodel 3  2 0 0 "dcp/bench"      //12
+mapmodel 3  2 0 0 "bench"          //12
 mapmodel 2 4 0 0 "dumpster"        //13
 mapmodel 0 0 0 0 "roadblock01"     //14 use nothing mapmodels to clip
 mapmodel 0 0 0 0 "roadblock02"     //15
