--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -20,7 +20,7 @@ mapmodel 0 8 0 0 "ladder_8x"       //6
 mapmodel 0 10 0 0 "ladder_10x"     //7
 mapmodel 0 11 0 0 "ladder_11x"     //8
 mapmodel 0 15 0 0 "ladder_15x"     //9 
-mapmodel 1 11 0 0 "dcp/streetlamp" //10
+mapmodel 1 12 0 0 "streetlamp"     //10
 mapmodel 1 12 0 0 "streetlamp"     //11
 mapmodel 3  2 0 0 "bench"          //12
 mapmodel 2 4 0 0 "dumpster"        //13
@@ -47,7 +47,7 @@ mapmodel 0 0 0 0 "bulb"            //30
 mapmodel 1  3 0 0 "barrel"         //31
 mapmodel 1  2 0 0 "barrel2"        //32
 mapmodel 0  0 0 0 "elektro"        //33  
-mapmodel 3  1 0 0 "dcp/palette"    //34
+mapmodel 3  1 0 0 "europalette"    //34
 mapmodel 0 0 0 0 "gastank"         //35 use nothing model to clip
 mapmodel 2 1 0 0 "gutter_h"        //36
 mapmodel 1 2 0 0 "gutter_v"        //37
