--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -131,8 +131,8 @@ menuitem "Ladder(15)"            "newent mapmodel 9"
 
 newmenu street
 
-menuitem "Streetlight1" 	"newent mapmodel 10"
-menuitem "Streetlight2"    	"newent mapmodel 11"
+
+menuitem "Streetlight"    	"newent mapmodel 11"
 menuitem "Bench"        	"newent mapmodel 12"
 menuitem "Dumpster"    		"newent mapmodel 13"
 menuitem "Roadblock"     	"newent mapmodel 14"
