--- a/ac/packages/maps/ac_complex.cfg
+++ b/ac/packages/maps/ac_complex.cfg
@@ -10,8 +10,8 @@ mapmodel 0 10 0 0 "ladder_10x"
 mapmodel 1  3 0 0 "barrel"
 mapmodel 1  2 0 0 "barrel2"
 mapmodel 0  0 0 0 "elektro"
-mapmodel 1 11 0 0 "dcp/streetlamp"
-mapmodel 3  1 0 0 "dcp/palette"
+mapmodel 1 11 0 0 "streetlamp"
+mapmodel 3  1 0 0 "europalette"
 mapmodel 3  2 0 0 "bench"
 mapmodel 0  0 0 0 "signs/flammable"
 mapmodel 0  0 0 0 "signs/speed"
