--- a/ac/packages/maps/ac_depot.cfg
+++ b/ac/packages/maps/ac_depot.cfg
@@ -43,8 +43,8 @@ mapmodel 0 10 0 0 "ladder_10x"     //4
 mapmodel 1  3 0 0 "barrel"         //5
 mapmodel 1  2 0 0 "barrel2"        //6
 mapmodel 0  0 0 0 "elektro"        //7   
-mapmodel 1 11 0 0 "dcp/streetlamp" //8
-mapmodel 3  1 0 0 "dcp/palette"    //9
+mapmodel 1 11 0 0 "streetlamp"     //8
+mapmodel 3  1 0 0 "europalette"    //9
 mapmodel 3  2 0 0 "bench"          //10
 mapmodel 0  0 0 0 "signs/flammable"//11
 mapmodel 0  0 0 0 "signs/speed"    //12
